--- a/pigDice.css
+++ b/pigDice.css
@@ -46,6 +46,11 @@ body {
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
 }
+
+.jumbotron img {
+    display: inline-block;
+}
+
 .jumbotron .btn {
     padding: 14px 24px;
     font-size: 21px;
