updated background color

--- a/pigDice.css
+++ b/pigDice.css
@@ -10,6 +10,7 @@ body {
 }
 
 #layout {
+    background-color: #eee;
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
     margin: 0;
