changed name of function to match tests

--- a/pigDice.css
+++ b/pigDice.css
@@ -14,7 +14,7 @@ body {
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
     margin: 0;
-    padding-top: 20px;
+    padding: 20px 10px 0;
 }
 
 .glyphicon-arrow-right {
